--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-welcome to automation
+
+
+
+
+
+
+ooooooooo wow this is really beautiful...!!!
 <br />
 
 <pre>
-<?php?
+<?php
+print 'hello'
 print `ifconfig`;
 print  `free -m`;
 
 ?>
+<img src="https://my-task1-bucket.s3.ap-south-1.amazonaws.com/withvimalsir.jpg" width="500" height="500">
 </pre>
