--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@ print `ifconfig`;
 print  `free -m`;
 
 ?>
-<img src="https://my-task1-bucket.s3.ap-south-1.amazonaws.com/withvimalsir.jpg" width="500" height="500">
+<img src="https://my-tf-test-bucket-aman-miglani-a.s3.ap-south-1.amazonaws.com/myimage.jpg" width="500" height="500">
 </pre>
